[Bugfix:Forum] Removed useless edit modal scrollbar and fixed textarea not auto-resizing

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -1147,7 +1147,6 @@ div.full_height {
 
 .popup-form .form-body {
     flex-grow: 1;
-    overflow-y: auto;
 }
 
 .popup-form .form-buttons {
